cloudinary image upload with a image for testing is completed (it should change in future )

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,8 @@ PORT=3000
 JWT_SECRET="Jwt secret key"
 NODE_ENV="development"
 FRONTEND_URL="Your frontend URL"
+
+CLOUDINARY_CLOUD_NAME="Your cloud name"
+CLOUDINARY_API_KEY="Your sloudinary api key"
+CLOUDINARY_API_SECRET="Your api secret for cloudinary"
+CLOUDINARY_URL="Your cloudinary url"
