--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@martinjohnm/rebike-common": "^1.0.6",
+    "@martinjohnm/rebike-common": "^1.0.7",
     "@prisma/client": "^5.19.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
