--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@martinjohnm/rebike-common": "^1.0.1",
+    "@martinjohnm/rebike-common": "^1.0.8",
+    "@types/recoil": "^0.0.9",
+    "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "recoil": "^0.7.7",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
