completed company wise filtering

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,10 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@martinjohnm/rebike-common": "^1.0.8",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@martinjohnm/rebike-common": "^1.1.0",
+    "@mui/material": "^6.0.2",
     "@prisma/client": "^5.19.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
@@ -34,6 +37,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.23.8"
   }
 }
