--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@martinjohnm/rebike-common": "^1.0.8",
+    "@coreui/coreui": "^5.1.2",
+    "@coreui/react": "^5.3.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@martinjohnm/rebike-common": "^1.1.0",
+    "@mui/material": "^6.0.2",
+    "@mui/x-date-pickers": "^7.16.0",
     "@types/recoil": "^0.0.9",
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.0",
+    "react-selector": "^0.0.5",
+    "react-time-picker": "^7.0.0",
     "recoil": "^0.7.7",
     "sonner": "^1.5.0"
   },
