--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "razorpay": "^2.9.4",
+    "stripe": "^17.2.0",
     "zod": "^3.23.8"
   }
 }
