--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,13 @@
     "@martinjohnm/rebike-common": "^1.1.6",
     "@mui/material": "^6.0.2",
     "@mui/x-date-pickers": "^7.16.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.8.0",
     "@types/recoil": "^0.0.9",
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
+    "primereact": "^10.8.3",
+    "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
     "react-datepicker": "^7.3.0",
@@ -29,6 +33,7 @@
     "react-select": "^5.8.0",
     "react-selector": "^0.0.5",
     "react-time-picker": "^7.0.0",
+    "reactjs-popup": "^2.0.6",
     "recoil": "^0.7.7",
     "sonner": "^1.5.0"
   },
