--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc -b",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
